--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,7 +42,6 @@ a {
     display: flex;
     flex-direction: row;
     overflow: hidden;
-    height: 550px;
 }
 
 .post-image {
@@ -72,7 +71,9 @@ a {
 }
 
 .content {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .post-text {
